2007-09-10  Daniel Nylander <po@danielnylander.se>

	* translation-teams.xml.in: Updated Swedish information.

2007-09-09  Claude Paroz  <claude@2xlibre.net>

	* templates/index.tmpl: Added possibility to view gettext and intltool
	version in HTML comments inside home page.

2007-09-09  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gtksourceview branched for 2.20.

2007-09-08  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added new gbrainy module.

2007-09-07  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: stringfrozen property removed from gnome-utils
	HEAD.

2007-09-02  Johannes Schmid <jhs@gnome.org>

	* gnome-modules-xml.in:
	* releases.xml.in:

	gnome-utils branched for gnome-2-20

2007-09-02  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Added goffice bugs-product property.

2007-09-01  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Added path for release-notes SVN.

2007-09-01  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Added 2.20 release notes doc.

2007-09-01  Claude Paroz  <claude@2xlibre.net>

	* templates/header.tmpl:
	* data/foot-16.png: Added GNOME foot icon in URLs.

2007-09-01  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added missing goffice module.

2007-08-30  Danilo Šegan  <danilo@gnome.org>

	* accept.py (_LanguageSelector.select_from): compare with
	lower()ed language tag.  Fixes #471710.

2007-08-28  Johannes Schmid <jhs@gnome.org>

	* gnome-modules.xml.in: Removed string frozen from 
	gnome-icon-theme HEAD

2007-08-28  Johannes Schmid <jhs@gnome.org>

	* releases.xml.in: gnome-icon-theme branched for 2.20
	* gnome-modules.xml.in: dito

2007-08-28  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Apply String Freeze to GNOME 2.20 modules.
	* releases.xml.in: Epiphany branched for 2.20.

2007-08-27  Danilo Šegan  <danilo@gnome.org>
