@@ -1,3 +1,7 @@
+2007-09-11  Danilo Šegan  <danilo@gnome.org>
+
+	* compare-releases.py: Added script to compare releases.
+
 2007-09-10  Daniel Nylander <po@danielnylander.se>
 
 	* translation-teams.xml.in: Updated Swedish information.
